<resources>
    <string name="app_name">MP7</string>
    <string name="product_name">Product Name</string>
    <string name="button_one">See Results!</string>
    <string name="button_two">Let\'s Go!</string>
    <string name="return_button">Search Again?</string>
    <string name="main">Go Back To Main Page</string>
    <string name="app_introduction">Video Game Price Checker</string>
    <string name="description_one">Welcome to the Video Game Price Checker. You can choose to compare prices and look for availability of video games, or calculate the cost of your wishlist.</string>
    <string name="description_two">Type in the name of one of a video game! Double click the button to see prices!</string>
    <string name="description_three">Calculate the cost of your wishlist!</string>
    <string name="citations">API and product information from PriceCharting.com. Photo taken from OpenClipArt.com.</string>
    <string name="game_title">Game Title:</string>
    <string name="available">Is this being offered?</string>
    <string name="price_one">Here\'s the offered price:</string>
    <string name="price_two">Here\'s is the retail price:</string>
    <string name="price_three">Here\'s is the sell price:</string>
    <string name="add_game">Add this game!</string>
    <string name="wishlist">Here\'s the cost of your wishlist:</string>
    <string name="calculate">Calculate Wish list!</string>
    <string name="cart_one">Choose one of the games below!</string>
    <string name="cart_two">Or add an game yourself!</string>
</resources>