<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    android:background="#D8F7FE" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:layout_marginTop="25dp">


        <ImageView
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:background="@drawable/gamecontroller"
            android:contentDescription="@string/app_name"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/app_introduction"
            android:textSize="25sp"
            android:textColor="#2a2a2a"
            />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="10dp"
        android:text="@string/description_one"
        android:textColor="#2a2a2a"
        android:textSize="15sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="25dp"
        android:background="@color/colorPrimaryDark"
        android:visibility="visible" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="28dp"
        android:layout_marginTop="25dp"
        android:text="@string/description_two"
        android:textColor="#2a2a2a"
        android:textSize="15sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/product_name"
        android:textColor="#2a2a2a"
        android:ems="10"
        android:id="@+id/itemPrice"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="@color/colorPrimaryDark"
        android:textColor="#ffffff"
        android:text="@string/button_one"
        android:id="@+id/priceCalculator"
        android:layout_marginTop="5dp"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="25dp"
        android:background="@color/colorPrimaryDark"
        android:visibility="visible" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="28dp"
        android:layout_marginTop="25dp"
        android:text="@string/description_three"
        android:textColor="#2a2a2a"
        android:textSize="15sp"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="@color/colorPrimaryDark"
        android:textColor="#ffffff"
        android:text="@string/button_two"
        android:id="@+id/wishlist"
        android:layout_marginTop="5dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="28dp"
        android:layout_marginTop="10dp"
        android:text="@string/citations"
        android:textColor="#2a2a2a"
        android:textSize="10sp"
        />

</LinearLayout>