<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    android:background="#D8F7FE" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:layout_marginTop="25dp">


        <ImageView
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:background="@drawable/gamecontroller"
            android:contentDescription="@string/app_name"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/app_introduction"
            android:textSize="25sp"
            android:textColor="#2a2a2a"
            />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="25dp"
        android:background="@color/colorPrimaryDark"
        android:visibility="visible" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Choose some of the games below! Click calculate wishlist to see cost of your wishlist!"
        android:textColor="#2a2a2a"
        android:textSize="15sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/checkBox">

            <CheckBox
                android:id="@+id/checkBox1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Super Mario Bros 3" />

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Legend of Zelda" />

            <CheckBox
                android:id="@+id/checkBox3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Horizon Zero Dawn" />

            <CheckBox
                android:id="@+id/checkBox4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Overwatch" />

        </LinearLayout>
    </ScrollView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/cart_two"
        android:textColor="#2a2a2a"
        android:textSize="15sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/product_name"
        android:textColor="#2a2a2a"
        android:ems="10"
        android:id="@+id/editText"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="@color/colorPrimaryDark"
        android:textColor="#ffffff"
        android:text="@string/add_game"
        android:id="@+id/addGame"
        android:layout_marginTop="5dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="175dp"
            android:layout_height="match_parent"
            android:text="@string/wishlist"
            android:textColor="#2a2a2a"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/wishlist"
            android:layout_width="175dp"
            android:layout_height="match_parent"
            android:text=""
            android:textColor="#2a2a2a"
            android:textSize="15sp"
            />

    </LinearLayout>

    <Button
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="@color/colorPrimaryDark"
        android:textColor="#ffffff"
        android:text="@string/calculate"
        android:id="@+id/calculate"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="25dp"
        android:background="@color/colorPrimaryDark"
        android:visibility="visible" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="@color/colorPrimaryDark"
        android:textColor="#ffffff"
        android:text="@string/main"
        android:id="@+id/mainPage"
        android:layout_marginTop="5dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="28dp"
        android:layout_marginTop="10dp"
        android:text="@string/citations"
        android:textColor="#2a2a2a"
        android:textSize="10sp"
        />

</LinearLayout>